--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </section>
     <section class="dream">
         <div class="half-width">
-            <img src="images/pic2.png">
+            <img src="images/image11.png">
         </div>
         <div class="half-width">
             <h1>Dream Big</h1>
