pic show korena

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     </section>
     <section class="dream">
         <div class="half-width">
-            <img src="images/image11.png">
+            <img src="images/image11.png" alt="">
+            
         </div>
         <div class="half-width">
             <h1>Dream Big</h1>
