--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     </section>
     <section class="dream">
         <div class="half-width">
-            <img src="images/image11.png" alt="">
-            
+            <img src="images/pic2.png">
         </div>
         <div class="half-width">
             <h1>Dream Big</h1>
@@ -39,7 +38,7 @@
             <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
         </div>
         <div id="baby-stack" class="half-width single-experience">
-            <h2>Baby Web Developer</h2>
+            <h>Baby Web Developer</h2>
             <h3 class="line-highlight">2020-2021 | Programming Hero Learner</h3>
             <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
         </div>
