--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h2>Full Stack Web Developer</h2>
             <h3 class="line-highlight">2021-Present | Pro Level Developer
             </h3>
-            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            <p>I am a master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
         </div>
         <div id="baby-stack" class="half-width single-experience">
             <h2>Baby Web Developer</h2>
